# lar

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  build.bash  build.sh  project.ini  pyproject.toml
.github/workflows/: release.yml  test.yml
CMakeModules/: FindG2O.cmake
apps/: CMakeLists.txt  bundle_adjustment.cpp  geoar_bundle_adjustment.cpp  geoar_create_map.cpp  geoar_localize.cpp  lar_create_map.cpp  lar_iimoriyama.cpp  lar_localize.cpp  lar_refine_colmap.cpp  lar_rtree.cpp  lar_server.cpp  lar_sift.cpp
apps/g2o_ba_demo/: CMakeLists.txt  g2o_ba_demo.cpp
cmake/: SuperBuild.cmake
cmake_modules/: FindEigen3.cmake
docs/: INSTALLATION.md  INSTALL_G2O_VIEWER.md  RECONSTRUCTION.md
include/g2o/: config.h
include/geoar/collection/: collection.h
include/geoar/core/: frame.h  landmark.h  landmark_database.h  map.h
include/geoar/mapping/: frame.h  location_matcher.h  mapper.h
include/geoar/process/: bundle_adjustment.h  depth.h  frame_processing.h  graph_construction.h  landmark_extractor.h  map_processing.h  map_processing_data.h  map_processor.h  projection.h  vertex_se3_expmap.h  vision.h
include/geoar/processing/: bundle_adjustment.h  depth.h  frame_processing.h  frame_processor.h  map_processing.h  map_processing_data.h  map_processor.h  projection.h
include/geoar/rtree/: rtree.h
include/opencv2/: cvconfig.h
proto/: navigation.proto  pathfinding.proto
script/: build_artifacts.bash  build_framework_bundle.bash  build_frameworks.bash  build_g2o_framework.bash  build_geoar_framework.bash  build_lar_framework.bash  build_opencv_framework.bash  build_thirdparty_includes.bash  colmap.bash  depth.bash  generate_framework.bash  install-deps-linux.sh  install-deps-osx.sh  merged_framework.bash
script/colmap/: arkit_integration.py  colmap.py  colmap_pose.py  database_operations.py  feature_extraction.py  map_export.py  pose_prior_utils.py
script/depth/: DepthCLI
script/patches/: apply_opencv5_patches.sh
src/: CMakeLists.txt
src/collection/: CMakeLists.txt  collection.cpp
src/core/: CMakeLists.txt  anchor.cpp  frame.cpp  landmark.cpp  landmark_database.cpp  map.cpp
src/core/data_structures/: CMakeLists.txt  unordered_array.cpp
src/core/spacial/: CMakeLists.txt  point.cpp  rect.cpp  rectangle.cpp  region_tree.cpp
src/core/spacial/region_tree/: CMakeLists.txt  _node.cpp  _node.h  _node_partition.cpp  _node_partition.h  _node_traits.h  node.cpp  node.h  node_partition.cpp  node_partition.h  node_traits.h  region_tree.cpp
src/core/spatial/: CMakeLists.txt  point.cpp  rect.cpp
src/core/spatial/region_tree/: CMakeLists.txt  node.cpp  node.h  node_partition.cpp  node_partition.h  node_traits.h  region_tree.cpp
src/core/utils/: transform.cpp
src/demo/: ba_demo.cpp
src/mapping/: CMakeLists.txt  frame.cpp  location_matcher.cpp  mapper.cpp
src/process/: CMakeLists.txt  bundle_adjustment.cpp  depth.cpp  frame_processing.cpp  graph_construction.cpp  landmark_extractor.cpp  map_create.cpp  map_processing.cpp  map_processing_data.cpp  map_processor.cpp  parse_map.cpp  projection.cpp  vertex_se3_expmap.cpp  vision.cpp
src/processing/: CMakeLists.txt  bundle_adjustment.cpp  colmap_database.cpp  colmap_refiner.cpp  depth.cpp  frame_processing.cpp  frame_processor.cpp  global_alignment.cpp  map_processing.cpp  map_processing_data.cpp  map_processor.cpp  projection.cpp
src/rtree/: CMakeLists.txt  rtree.cpp
src/server/: pathfinding_service.cpp
src/service/: CMakeLists.txt  navigation_service.cpp  pathfinding_service.cpp
src/tracking/: CMakeLists.txt  camera_pose_filter.cpp  confidence_estimator.cpp  coordinate_transform_manager.cpp  filtered_tracker.cpp  filtered_tracker_config.cpp  outlier_detector.cpp  pose_filter_strategy.cpp  sift.cpp  sift.metal  sift_benchmark.cpp  sift_fused.metal  sift_metal.mm  sift_metal_common.h  sift_metal_fused.mm  tracker.cpp  tracking.cpp  vio_motion_estimator.cpp  vision.cpp
src/tracking/confidence_estimation/: distance_stratified_confidence_estimator.cpp  geometric_confidence_estimator.cpp  reprojection_based_confidence_estimator.cpp  simple_confidence_estimator.cpp
src/tracking/detectors/: CMakeLists.txt  sift.cpp
src/tracking/matching/: bf_matcher_metal.mm  flann_matcher.cpp
src/tracking/matching/metal/: bf_matcher.metal
src/tracking/outlier_detection/: chi_squared_outlier_detector.cpp  confidence_outlier_detector.cpp  distance_outlier_detector.cpp  outlier_detector_base.cpp
src/tracking/pose_filtering/: averaging_filter.cpp  extended_kalman_filter.cpp  pass_through_filter.cpp  pose_state.cpp  sliding_window_ba.cpp  smooth_filter.cpp
src/tracking/sift/: CMakeLists.txt  metal_sift.mm  sift.cpp  sift.metal  sift_common.cpp  sift_constants.metal  sift_fused.metal  sift_impl_cpu.cpp  sift_impl_cpu.h  sift_impl_metal.h  sift_impl_metal.mm  sift_metal.h  sift_metal.mm  sift_metal_common.h  sift_metal_common.mm  sift_metal_fused.mm  sift_metal_pipelined.mm
src/tracking/sift/metal/: sift.metal  sift_fused.metal
src/types/: CMakeLists.txt  frame.cpp
test/: CMakeLists.txt
test/_fixture/processed_map_data/: map.g2o  map.json
test/_fixture/raw_map_data/: 00000000_depth.pfm  00000001_confidence.pfm  00000001_depth.pfm  00000002_depth.pfm  00000003_depth.pfm  00000004_depth.pfm  frames.json  gps.json  map.json  metadata.json
test/collection/: CMakeLists.txt  collection_test.cpp
test/core/: CMakeLists.txt  frame_test.cpp  map_test.cpp
test/core/spacial/: CMakeLists.txt  rect_test.cpp  rectangle_test.cpp  region_tree_test.cpp
test/core/spatial/: CMakeLists.txt  rect_test.cpp  region_tree_test.cpp
test/core/utils/: CMakeLists.txt  base64_test.cpp  json_test.cpp  transform_test.cpp  wgs84_test.cpp
test/mapping/: CMakeLists.txt  frame_test.cpp  location_matcher_test.cpp  mapper_test.cpp
test/process/: CMakeLists.txt  projection_test.cpp
test/processing/: CMakeLists.txt  colmap_database_test.cpp  colmap_refiner_test.cpp  global_alignment_test.cpp  projection_test.cpp
test/tracking/: CMakeLists.txt  sift_test.cpp  tracker_test.cpp  tracking_test.cpp
(+90 files in other folders)
